--- a/Python Modules/vacvalves/vacvalves.cbp
+++ b/Python Modules/vacvalves/vacvalves.cbp
@@ -36,7 +36,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_Vac_Valve_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Vac_Valve_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -64,6 +64,9 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCbase.cpp" />
+		<Unit filename="../../Hardware/VCbase.h" />
+		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
