Fix S02-VCOR3 position

--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -84,8 +84,8 @@ FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.01710333
 MAGNETIC_LENGTH = 139.50;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 11;
-DEGAUSS_VALUES = 7.6,   -7.38,  5.0,   -5.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
-DEGAUSS_TOLERANCE = 0.1;
+DEGAUSS_VALUES = 330, -330, 250, -250, 175, -175, 100, -100, 25, -25; ???
+DEGAUSS_TOLERANCE = 2;
 MAG_SET_MAX_WAIT_TIME = 45;
 MAGNET_BRANCH = LRG-BSOL; This is used to signify that the SOL & BSOL are linked
 
@@ -102,7 +102,7 @@ MAGNETIC_LENGTH = 726.91820512820505;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\SwissFEL Linac Solenoids";
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 9;
-DEGAUSS_VALUES = 10.0,   -10.0,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
+DEGAUSS_VALUES = 150, -150, 100, -100, 50, -50, 20, -20, 10, -10; ???
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -200;
 MAG_MAX_I = 200;
@@ -120,7 +120,7 @@ MAGNETIC_LENGTH = 726.91820512820505;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\SwissFEL Linac Solenoids";
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 9;
-DEGAUSS_VALUES = 10.0,   -10.0,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
+DEGAUSS_VALUES = 150, -150, 100, -100, 50, -50, 20, -20, 10, -10; ???
 MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -200;
 MAG_MAX_I = 200;
@@ -391,6 +391,37 @@ MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
+NAME = S02-HCOR3;
+PV_ROOT = CLA-S02-MAG-HCOR-03:;
+MAG_TYPE = HCOR;
+POSITION = 4.845560313;
+MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13262;
+FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
+MAGNETIC_LENGTH = 163;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
+RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
+NUM_DEGAUSS_STEPS = 9;
+DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
+MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
+
+NAME = S02-VCOR3;
+PV_ROOT = CLA-S02-MAG-VCOR-03:;
+MAG_TYPE = VCOR;
+POSITION = 4.845560313;
+MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13262;
+FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
+MAGNETIC_LENGTH = 163;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
+RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
+NUM_DEGAUSS_STEPS = 9;
+DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
+MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
 NAME = C2V-HCOR1;
 PV_ROOT = CLA-C2V-MAG-HCOR-01:;
@@ -444,7 +475,7 @@ MAG_TYPE = DIP;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
 NUM_DEGAUSS_STEPS = 11; ???
-DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
+DEGAUSS_VALUES  = 120,  -120, 80, -80, 30, -30, 10, -10, 5, -5; ???
 DEGAUSS_TOLERANCE  = 0.1; ???
 MAG_SET_MAX_WAIT_TIME = 45; ???C1-
 MAG_MIN_I = -130;
@@ -462,7 +493,7 @@ MAG_TYPE = DIP;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
 NUM_DEGAUSS_STEPS = 11; ???
-DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
+DEGAUSS_VALUES  = 120,  -120, 80, -80, 30, -30, 10, -10, 5, -5; ???
 DEGAUSS_TOLERANCE  = 0.1; ???
 MAG_SET_MAX_WAIT_TIME = 45; ???
 MAG_MIN_I = -200;
