exposed python lists not std_vector_double

--- a/Python Modules/cameraIA/cameraIA.cbp
+++ b/Python Modules/cameraIA/cameraIA.cbp
@@ -58,10 +58,98 @@
 					<Add directory="../../Hardware/camera" />
 					<Add directory="../../Hardware/camera/cameraIA" />
 					<Add directory="../../Structs" />
+					<Add directory="C:/root_v5.34.34/bin" />
+					<Add directory="C:/root_v5.34.34/include" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
+					<Add library="C:/root_v5.34.34/lib/complexDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/dequeDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/freetype.lib" />
+					<Add library="C:/root_v5.34.34/lib/libAfterImage.lib" />
+					<Add library="C:/root_v5.34.34/lib/libASImage.lib" />
+					<Add library="C:/root_v5.34.34/lib/libASImageGui.lib" />
+					<Add library="C:/root_v5.34.34/lib/libCint.lib" />
+					<Add library="C:/root_v5.34.34/lib/libCintex.lib" />
+					<Add library="C:/root_v5.34.34/lib/libCore.lib" />
+					<Add library="C:/root_v5.34.34/lib/libEG.lib" />
+					<Add library="C:/root_v5.34.34/lib/libEGPythia8.lib" />
+					<Add library="C:/root_v5.34.34/lib/libEve.lib" />
+					<Add library="C:/root_v5.34.34/lib/libFitPanel.lib" />
+					<Add library="C:/root_v5.34.34/lib/libFoam.lib" />
+					<Add library="C:/root_v5.34.34/lib/libFTGL.lib" />
+					<Add library="C:/root_v5.34.34/lib/libFumili.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGdml.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGed.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGenetic.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGenVector.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGeom.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGeomBuilder.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGeomPainter.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGLEW.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGpad.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGraf.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGraf3d.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGui.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGuiBld.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGuiHtml.lib" />
+					<Add library="C:/root_v5.34.34/lib/libGviz3d.lib" />
+					<Add library="C:/root_v5.34.34/lib/libHist.lib" />
+					<Add library="C:/root_v5.34.34/lib/libHistPainter.lib" />
+					<Add library="C:/root_v5.34.34/lib/libHtml.lib" />
+					<Add library="C:/root_v5.34.34/lib/libMathCore.lib" />
+					<Add library="C:/root_v5.34.34/lib/libMathMore.lib" />
+					<Add library="C:/root_v5.34.34/lib/libMatrix.lib" />
+					<Add library="C:/root_v5.34.34/lib/libMinuit.lib" />
+					<Add library="C:/root_v5.34.34/lib/libMinuit2.lib" />
+					<Add library="C:/root_v5.34.34/lib/libMLP.lib" />
+					<Add library="C:/root_v5.34.34/lib/libNet.lib" />
+					<Add library="C:/root_v5.34.34/lib/libPhysics.lib" />
+					<Add library="C:/root_v5.34.34/lib/libPostscript.lib" />
+					<Add library="C:/root_v5.34.34/lib/libProof.lib" />
+					<Add library="C:/root_v5.34.34/lib/libProofDraw.lib" />
+					<Add library="C:/root_v5.34.34/lib/libProofPlayer.lib" />
+					<Add library="C:/root_v5.34.34/lib/libPyROOT.lib" />
+					<Add library="C:/root_v5.34.34/lib/libQuadp.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRecorder.lib" />
+					<Add library="C:/root_v5.34.34/lib/libReflex.lib" />
+					<Add library="C:/root_v5.34.34/lib/libReflexDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRGL.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRHTTP.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRint.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRIO.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRODBC.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRooFit.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRooFitCore.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRooStats.lib" />
+					<Add library="C:/root_v5.34.34/lib/libRootAuth.lib" />
+					<Add library="C:/root_v5.34.34/lib/libSessionViewer.lib" />
+					<Add library="C:/root_v5.34.34/lib/libSmatrix.lib" />
+					<Add library="C:/root_v5.34.34/lib/libSpectrum.lib" />
+					<Add library="C:/root_v5.34.34/lib/libSpectrumPainter.lib" />
+					<Add library="C:/root_v5.34.34/lib/libSPlot.lib" />
+					<Add library="C:/root_v5.34.34/lib/libSQLIO.lib" />
+					<Add library="C:/root_v5.34.34/lib/libTable.lib" />
+					<Add library="C:/root_v5.34.34/lib/libThread.lib" />
+					<Add library="C:/root_v5.34.34/lib/libTMVA.lib" />
+					<Add library="C:/root_v5.34.34/lib/libTree.lib" />
+					<Add library="C:/root_v5.34.34/lib/libTreePlayer.lib" />
+					<Add library="C:/root_v5.34.34/lib/libTreeViewer.lib" />
+					<Add library="C:/root_v5.34.34/lib/libUnuran.lib" />
+					<Add library="C:/root_v5.34.34/lib/libVMC.lib" />
+					<Add library="C:/root_v5.34.34/lib/libWin32gdk.lib" />
+					<Add library="C:/root_v5.34.34/lib/libXMLIO.lib" />
+					<Add library="C:/root_v5.34.34/lib/listDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/map2Dict.lib" />
+					<Add library="C:/root_v5.34.34/lib/mapDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/mathtext.lib" />
+					<Add library="C:/root_v5.34.34/lib/multimap2Dict.lib" />
+					<Add library="C:/root_v5.34.34/lib/multimapDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/multisetDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/setDict.lib" />
+					<Add library="C:/root_v5.34.34/lib/vectorDict.lib" />
+					<Add directory="C:/root_v5.34.34/bin" />
 				</Linker>
 				<ExtraCommands>
 					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
