--- a/Python Modules/pilaser/pilaserPYD.cbp
+++ b/Python Modules/pilaser/pilaserPYD.cbp
@@ -86,17 +86,20 @@
 		<Unit filename="../../Hardware/pilaser/pilaserController.h" />
 		<Unit filename="../../Hardware/pilaser/pilaserInterface.cpp" />
 		<Unit filename="../../Hardware/pilaser/pilaserInterface.h" />
-		<Unit filename="../../Hardware/shutter/shutterController.cpp" />
-		<Unit filename="../../Hardware/shutter/shutterController.h" />
-		<Unit filename="../../Hardware/shutter/shutterInterface.cpp" />
-		<Unit filename="../../Hardware/shutter/shutterInterface.h" />
-		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeController.cpp" />
-		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeController.h" />
-		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeInterface.cpp" />
-		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeInterface.h" />
+		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeController.cpp">
+			<Option target="Debug" />
+		</Unit>
+		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeController.h">
+			<Option target="Debug" />
+		</Unit>
+		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeInterface.cpp">
+			<Option target="Debug" />
+		</Unit>
+		<Unit filename="../../Hardware/virtual_cathode/virtualCathodeInterface.h">
+			<Option target="Debug" />
+		</Unit>
 		<Unit filename="../../Structs/pi_laser/pilaserStructs.h" />
 		<Unit filename="../../Structs/pi_laser/virtualCathodeStructs.h" />
-		<Unit filename="../../Structs/shutterStructs.h" />
 		<Unit filename="../../Structs/structs.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
@@ -111,8 +114,6 @@
 		<Unit filename="../../Utilities/pi_laser/pilaserConfigReader.h" />
 		<Unit filename="../../Utilities/pi_laser/virtualCathodeConfigReader.cpp" />
 		<Unit filename="../../Utilities/pi_laser/virtualCathodeConfigReader.h" />
-		<Unit filename="../../Utilities/shutterConfigReader.cpp" />
-		<Unit filename="../../Utilities/shutterConfigReader.h" />
 		<Unit filename="include/VCpilaser.h" />
 		<Unit filename="src/VCpilaser.cpp" />
 		<Extensions>
