[config] VELA BPM positions
Positions just used for ordering, don't rely on them for exact
positions. Also some changes apparently made by Tim last year

--- a/Config/claraPH1BeamPositionMonitors.config
+++ b/Config/claraPH1BeamPositionMonitors.config
@@ -1,6 +1,6 @@
 VELA BPM CONFIG FILE v1
 
-###########Update: Tim Price changed BPM PV prefixes on 18.04.2017###############
+##########Update: Tim Price changed BPM PV prefixes on 18.04.2017###############
 
 
 Feel free to write any comments all over this file,
@@ -61,12 +61,12 @@ PV_MASK            = DBE_VALUE;
 
 PV_SUFFIX_BPM_X    = X;
 PV_COUNT           = 1;
-PV_CHTYPE          = DBR_DOUBLE;
+PV_CHTYPE          = DBR_TIME_DOUBLE;
 PV_MASK            = DBE_VALUE;
 
 PV_SUFFIX_BPM_Y    = Y;
 PV_COUNT           = 1;
-PV_CHTYPE          = DBR_DOUBLE;
+PV_CHTYPE          = DBR_TIME_DOUBLE;
 PV_MASK            = DBE_VALUE;
 
 PV_SUFFIX_BPM_DATA = DATA:B2V.VALA;
@@ -75,83 +75,59 @@ PV_CHTYPE          = DBR_TIME_DOUBLE;
 PV_MASK            = DBE_VALUE;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 6;      For sanity checks
+NUMBER_OF_OBJECTS = 4;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME    = BPM01;
-PV_ROOT = EBT-INJ-DIA-BPMC-02:;
-ATT1CAL = 7;
-ATT2CAL = 6;
-V1CAL 	= 0.990866126418;
-V2CAL	= 1.00521321356;
+NAME    = S01-BPM01;
+PV_ROOT = CLA-S01-DIA-BPM-01:;
+ATT1CAL = 10;
+ATT2CAL = 11;
+V1CAL 	= 0.9398;
+V2CAL	= 0.9678;
 QCAL 	= 68;
 MN      = 9.5;
 XN      = 0;
 YN      = 0;
-POSITION = 0.9;
+POSITION = 0.9377;
 
-NAME    = BPM02;
-PV_ROOT = EBT-INJ-DIA-BPMC-04:;
-ATT1CAL = 6;
-ATT2CAL = 6;
-V1CAL 	= 0.994432777404;
-V2CAL	= 0.991948485896;
-QCAL 	= 50;
-MN      = 9.5;
-XN      = 0;
-YN      = 0;
-POSITION = 3.519;
-
-NAME    = BPM03;
-PV_ROOT = EBT-INJ-DIA-BPMC-06:;
-ATT1CAL = 4;
-ATT2CAL = 5;
-V1CAL 	= 0.999162302408;
-V2CAL	= 0.94357078895;
-QCAL 	= 53;
-MN      = 15;
-XN      = 0;
-YN      = 0;
-POSITION = 4.462;
-
-NAME    = BPM04;
-PV_ROOT = EBT-INJ-DIA-BPMC-10:;
-ATT1CAL = 4;
-ATT2CAL = 6;
-V1CAL 	= 1.02152888417;
-V2CAL	= 0.991948485896;
+NAME    = S02-BPM01;
+PV_ROOT = CLA-S02-DIA-BPM-01:;
+ATT1CAL = 8;
+ATT2CAL = 8;
+V1CAL 	= 0.9808;
+V2CAL	= 0.9686;
 QCAL 	= 68;
 MN      = 9.5;
 XN      = 0;
 YN      = 0;
-POSITION = 10.215;  Added length of SP1 line to get things in the right order
+POSITION = 3.6228;
 
-NAME    = BPM05;
-PV_ROOT = EBT-INJ-DIA-BPMC-12:;
-ATT1CAL = 6;
-ATT2CAL = 6;
-V1CAL 	= 0.994432777404;
-V2CAL	= 0.991948485896;
-QCAL 	= 50;
-MN      = 9.5;
-XN      = 0;
-YN      = 0;
-POSITION = 14.121;  Added length of SP1 line to get things in the right order
-
-NAME    = BPM06;
-PV_ROOT = EBT-INJ-DIA-BPMC-14:;
-ATT1CAL = 4;
-ATT2CAL = 6;
-V1CAL 	= 1.02152888417;
-V2CAL	= 0.991948485896;
+NAME    = S02-BPM02;
+PV_ROOT = CLA-S02-DIA-BPM-02:;
+ATT1CAL = 9;
+ATT2CAL = 9;
+V1CAL 	= 0.9642;
+V2CAL	= 0.9588;
 QCAL 	= 68;
 MN      = 9.5;
 XN      = 0;
 YN      = 0;
-POSITION = 27.072;  Added length of SP1+BA2 lines to get things in the right order
+POSITION = 11.624; Length of C2V and SP1 line (5.172m) added on to put QUAD05 after it
+
+NAME    = C2V-BPM01;
+PV_ROOT = CLA-C2V-DIA-BPM-01:;
+ATT1CAL = 8;
+ATT2CAL = 8;
+V1CAL 	= 0.974;
+V2CAL	= 0.958;
+QCAL 	= 68;
+MN      = 9.5;
+XN      = 0;
+YN      = 0;
+POSITION = 6.5369;
 
 END_OF_DATA;
