--- a/Python Modules/general_monitor/general_monitor.cbp
+++ b/Python Modules/general_monitor/general_monitor.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_General_Monitor" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_General_Monitor" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -45,32 +45,24 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/VCbase.cpp" />
+		<Unit filename="../../Hardware/VCbase.h" />
+		<Unit filename="../../Hardware/VCheader.h" />
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
-		<Unit filename="../../Hardware/interface.cpp">
-			<Option target="Debug" />
-		</Unit>
-		<Unit filename="../../Hardware/interface.h">
-			<Option target="Debug" />
-		</Unit>
+		<Unit filename="../../Hardware/interface.cpp" />
+		<Unit filename="../../Hardware/interface.h" />
 		<Unit filename="../../Structs/gmStructs.h" />
 		<Unit filename="../../Structs/structs.h" />
 		<Unit filename="../../Utilities/baseObject.cpp" />
 		<Unit filename="../../Utilities/baseObject.h" />
 		<Unit filename="../../Utilities/configDefinitions.h" />
-		<Unit filename="../../Utilities/configReader.cpp">
-			<Option target="Debug" />
-		</Unit>
-		<Unit filename="../../Utilities/configReader.h">
-			<Option target="Debug" />
-		</Unit>
+		<Unit filename="../../Utilities/configReader.cpp" />
+		<Unit filename="../../Utilities/configReader.h" />
+		<Unit filename="../../Utilities/running_stat.h" />
 		<Unit filename="include/VCgeneralMonitor.h" />
-		<Unit filename="main.cpp">
-			<Option target="Debug" />
-		</Unit>
-		<Unit filename="main.h">
-			<Option target="Debug" />
-		</Unit>
+		<Unit filename="main.cpp" />
+		<Unit filename="main.h" />
 		<Unit filename="src/VCgeneralMonitor.cpp" />
 		<Extensions>
 			<code_completion />
