--- a/Python Modules/cameras/cameras.cbp
+++ b/Python Modules/cameras/cameras.cbp
@@ -34,6 +34,7 @@
 					<Add directory="../../Hardware/invertedMagnetronGauge" />
 					<Add directory="../../Hardware/shutter" />
 					<Add directory="../../Hardware/pilaser" />
+					<Add directory="Utilities/camera" />
 				</Compiler>
 				<Linker>
 					<Add option="/debug" />
@@ -67,6 +68,7 @@
 					<Add directory="../../Hardware/camera" />
 					<Add directory="../../Utilities/camera" />
 					<Add directory="../../Structs/camera" />
+					<Add directory="Utilities/camera" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
@@ -95,6 +97,8 @@
 		<Unit filename="../../Utilities/baseObject.h" />
 		<Unit filename="../../Utilities/camera/claraCameraConfigReader.cpp" />
 		<Unit filename="../../Utilities/camera/claraCameraConfigReader.h" />
+		<Unit filename="../../Utilities/camera/velaCameraConfigReader.cpp" />
+		<Unit filename="../../Utilities/camera/velaCameraConfigReader.h" />
 		<Unit filename="../../Utilities/configDefinitions.h" />
 		<Unit filename="../../Utilities/configReader.cpp" />
 		<Unit filename="../../Utilities/configReader.h" />
